--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "generate-api": "openapi-generator-cli generate -i http://localhost:8080/twentyone/api/v3/api-docs -g typescript-axios -o src/api --skip-validate-spec"
   },
   "dependencies": {
     "@ionic/vue": "^8.5.7",
@@ -20,6 +21,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.20.2",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
