--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,2 +1,25 @@
 spring.application.name=twentyone
 server.servlet.context-path=/twentyone/api
+
+# Spring Datasource Configuration for H2
+spring.datasource.url=jdbc:h2:mem:blackjackdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
+
+# Spring JPA Properties
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Optional: Show SQL executed by Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Optional: Enable H2 Console (useful for inspecting the database)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
